[EMCRI-809] Fixes for alignment of Goback/Save/Submit buttons on all 3 Application forms

--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-application-main/dfa-application-main.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-application-main/dfa-application-main.component.html
@@ -63,9 +63,9 @@
         [folderPath]="dfaApplicationMainFolderPath"
       ></app-component-wrapper>
       <br />
-      <div class="row justify-content-between resp-style">
-        <!-- 2024-10-11 EMCRI-820 waynezen;   -->
-        <div class="col-md-3" *ngIf="vieworedit === 'add' || vieworedit === 'edit' || vieworedit === 'view'">
+      <div class="row">
+        <!-- 2024-10-11 EMCRI-820 waynezen; allow Back button if Application is Submitted  -->
+        <div class="col-md-3" *ngIf="step.component !== 'application-details' && (vieworedit === 'add' || vieworedit === 'edit' || vieworedit === 'view')">
           <button
             class="button-s"
             [hidden]="step.component === 'application-details'"
@@ -75,6 +75,9 @@
           >
             {{ step.backButtonLabel }}
           </button>
+        </div>
+        <div class="col-md-3" *ngIf="step.component === 'application-details'">
+
         </div>
         <div class="col-md-3" *ngIf="vieworedit === 'add' || vieworedit === 'edit'">
           &nbsp;
@@ -86,14 +89,11 @@
           >
             Save Application
           </button>
-        </div>
+        </div>        
         <div class="col-md-6">
           <!-- 2024-10-11 EMCRI-820 waynezen;   -->
           <button
-            *ngIf="
-              currentFlow === 'verified-registration' &&
-                  (vieworedit === 'add' || vieworedit === 'edit' || vieworedit === 'view')
-            "
+            *ngIf="currentFlow === 'verified-registration' && (vieworedit === 'add' || vieworedit === 'edit' || vieworedit === 'view')"
             class="button-p"
             mat-stroked-button
             type="button"
@@ -103,6 +103,8 @@
           </button>
         </div>
         <br/>
+      </div>
+      <div class="row">
         <div class="col-md-12" style="padding: 35px 16px 28px 12px;">
           <p class="infoHeader">Information Viewable at Any Time by DFA Staff</p>
           <p>
@@ -125,15 +127,15 @@
       </app-review>
       <br />
 
-      <div class="row justify-content-between resp-style">
-        <div class="col-md-6" style="padding-left: 28px;">
+      <div class="row">
+        <div class="col-md-3" style="padding-left: 28px;">
           <button
             class="button-s"
             mat-button
             type="button"
             (click)="dfaApplicationMainStepper.previous()"
           >
-            <span>Go Back</span><span *ngIf="vieworedit === 'add' || vieworedit === 'update'"> & Edit</span>
+            <span>Go Back</span><span *ngIf="vieworedit === 'add' || vieworedit === 'update' || vieworedit === 'edit'"> & Edit</span>
           </button>
         </div>
         <!--&& ((formCreationService.otherContactsForm$ | async)?.value?.otherContacts?.length > 0)-->
@@ -147,7 +149,7 @@
           (click)="submitFile()"
         >
         <!-- 2024-10-12 EMCRI-809 waynezen; button displays "Save" if Application has already been Submitted - display "Submit" otherwise -->
-          <span *ngIf="vieworedit === 'add' || vieworedit === 'update'">Submit</span>
+          <span *ngIf="vieworedit === 'add' || vieworedit === 'update' || vieworedit === 'edit'">Submit</span>
           <span *ngIf="vieworedit === 'view'">Save</span>
         </button>
       </div>
