--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/project-dashboard-components/project/project.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/project-dashboard-components/project/project.component.html
@@ -171,7 +171,7 @@
           <span><b>EMCR Approved Amount -</b></span>
         </div>
         <div class="col-md-3">
-          <span id="spnCauseOfDamage">CA$&nbsp;{{ applItem.emcrApprovedAmount | number }}</span>
+          <span id="spnCauseOfDamage">CA$&nbsp;{{ applItem.emcrApprovedAmount | number : '1.2-2' }}</span>
         </div>
         <div class="col-md-2">
           <span><b>18 Month Deadline -</b></span>
