--- a/dfa-public/src/UI/embc-dfa/src/app/core/components/dialog-components/dfa-application-submission-msg-dialog/dfa-application-submission-msg.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/core/components/dialog-components/dfa-application-submission-msg-dialog/dfa-application-submission-msg.component.html
@@ -1,37 +1,39 @@
-<h2><b>Disaster Financial Assistance</b></h2>
+<div class="sub-pop-msg-container">
+  <h2><b>Disaster Financial Assistance</b></h2>
 
-<mat-dialog-content>
-  <div>
-    <p><br />
-      Your application has been submitted.
-      <br /><br />
-      Please only submit one application per disaster event. If your application is approved, you may add Cost Recovery Plan projects to your application.  
-      <br /><br />
-      The status of your application and projects are visible on your Dashboard. 
-      <br /><br />
-      If you have questions or need help, please contact the Disaster Financial Assistance team:
-      <br />
+  <mat-dialog-content>
+    <div>
+      <p><br />
+        Your application has been submitted.
+        <br /><br />
+        Please only submit one application per disaster event. If your application is approved, you may add Cost Recovery Plan projects to your application.  
+        <br /><br />
+        The status of your application and projects are visible on your Dashboard. 
+        <br /><br />
+        If you have questions or need help, please contact the Disaster Financial Assistance team:
+        <br />
       
-    </p>
-    <ul>
-      <li>
-        Email: DFA.public&#64;gov.bc.ca
-      </li>
-      <li>
-        Telephone: 1-888-257-4777 (toll-free)
-      </li>
-    </ul>
-    <div style="display: flex; justify-content: center;">
-      <img src="/assets/images/process_chart.png" height="490" width="840" />
+      </p>
+      <ul>
+        <li>
+          Email: DFA.public&#64;gov.bc.ca
+        </li>
+        <li>
+          Telephone: 1-888-257-4777 (toll-free)
+        </li>
+      </ul>
+      <div style="display: flex; justify-content: center;">
+        <img src="/assets/images/process_chart.png" height="490" width="840" />
+      </div>
     </div>
-  </div>
 
-</mat-dialog-content>
+  </mat-dialog-content>
 
-<mat-dialog-actions>
-  <div class="col-md-12">
-    <button class="button-p button-width" mat-button (click)="close()">
-     Back To Dashboard
-    </button>
-  </div>
-</mat-dialog-actions>
+  <mat-dialog-actions>
+    <div class="col-md-12">
+      <button class="button-p button-width" mat-button (click)="close()">
+       Back To Dashboard
+      </button>
+    </div>
+  </mat-dialog-actions>
+</div>
