--- a/dfa-public/src/UI/embc-dfa/src/app/core/components/app-loader/app-loader.component.scss
+++ b/dfa-public/src/UI/embc-dfa/src/app/core/components/app-loader/app-loader.component.scss
@@ -1,6 +1,6 @@
-::ng-deep .mat-progress-spinner circle,
-.mat-spinner circle {
-  stroke: currentColor;
+::ng-deep .mat-mdc-progress-spinner .mdc-circular-progress__determinate-circle,
+::ng-deep .mat-mdc-progress-spinner .mdc-circular-progress__indeterminate-circle-graphic {
+  stroke: #fff !important;
 }
 
 .loader-align {
