--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/address-forms/bc-address/bc-address.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/address-forms/bc-address/bc-address.component.html
@@ -107,7 +107,7 @@
   </div>
 
   <div class="row">
-    <div class="col-md-5">
+    <div class="col-md-12">
       <mat-form-field appearance="outline">
         <mat-label>Address Line 2</mat-label>
         <input
@@ -137,7 +137,7 @@
   </div>
 
   <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-6">
       <!--<mat-autocomplete #auto="matAutocomplete">
         @for (option of options; track option) {
           <mat-option [value]="option">{{option}}</mat-option>
@@ -210,10 +210,8 @@
         >
       </mat-form-field>
     </div>
-  </div>
-
-  <div class="row">
-    <div class="col-md-3">
+  
+    <div class="col-md-6">
       <mat-form-field appearance="outline">
         <mat-label>Province</mat-label>
         <input
@@ -243,7 +241,7 @@
   </div>
 
   <div class="row">
-    <div class="col-md-3">
+    <div class="col-md-12">
       <mat-form-field appearance="outline">
         <mat-label>Postal Code</mat-label>
         <input
@@ -283,7 +281,7 @@
     </div>
   </div>
 
-  <div id="divAddressMatchResponse" [style]="isCanadaPostValidated =='false' ? 'color: red' : 'color: green'">
+  <div id="divAddressMatchResponse" class="address-match-response" [style]="isCanadaPostValidated =='false' ? 'color: red' : 'color: green'">
     {{addressMatchResponse}}
   </div>
 
