--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-claim-main-forms/recovery-claim/recovery-claim.component.scss
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-claim-main-forms/recovery-claim/recovery-claim.component.scss
@@ -55,7 +55,7 @@ mat-form-field {
 
 .currencyText {
     position: relative;
-    left: -50px;
+    /*left: -50px;*/
     padding-left: 20px;
     border-left: 1px solid black;
 }
