--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/contacts/contacts.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/contacts/contacts.component.html
@@ -77,7 +77,7 @@
             Primary Contact
           </p>
           <div class="col-md-8">
-            <p>The primary contact must has a BCeID account. Search for their account by their BCeID user name<span style="color:red">*</span></p>
+            <p>The primary contact must have a BCeID account. Search for their account by their BCeID user name<span style="color:red">*</span></p>
             <div class="align-search">
             <div class="col-md-9">
               <mat-form-field appearance="outline">
