EMCRI-1033: Portal - Wording update required for FRCR (Insurance attestation)

--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-start-forms/apptype-insurance/apptype-insurance.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-start-forms/apptype-insurance/apptype-insurance.component.html
@@ -269,8 +269,9 @@
                   able to confirm eligibility until this information is provided.<br/><br/>
                 </div>
                 <div class="sub-heading radio-extra-label col-md-10" *ngIf="appTypeInsuranceForm.get('insuranceOption').value === option.key && option.value === radioInsuranceOptions.No">
-                  <br/>I/We declare that we carry no insurance (no fire, theft or liability) on the property listed on this Disaster Financial Assistance application. If I am later
-                  to have found to have insurance, I will be required to repay any financial assistance I've received. <br/><br/>
+                  <br/>I/We declare that we carry no insurance (no fire, theft or liability) on the property listed on this Disaster Financial Assistance application.  Most mortgage lenders require home insurance 
+                  to approve a loan. I/We acknowledge that if we have no insurance and have a mortgage we may be asked to show the mortgage agreement.  If I am later to have found to have insurance, I will be 
+                  required to repay any financial assistance I received.<br/><br/>
                   The Disaster Financial Assistance (DFA) Program operates under provincial legislation: <i>Emergency Program Act</i> and the <i>Compensation and
                   Disaster Financial Assistance Regulation</i>. Ministry of Emergency Management and Climate Readiness BC is obliged to provide DFA in accordance with this legislation. Section 8(1) of the Regulation
                   states: “'eligible costs' does not include costs of expenses (a) recoverable at law of for which insurance was reasonably and readily available.”<br/><br/>
