DEVOPS-108: Fix environment banner

--- a/dfa/src/UI/embc-dfa/src/app/app.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/app.component.html
@@ -4,9 +4,7 @@
     (closeEvent)="closeOutageBanner($event)"
   ></app-outage-banner>
 
-  @if (environment !== null && environment !== undefined) {
-    <app-environment-banner [environment]="environment"></app-environment-banner>
-  }
+  <app-environment-banner *ngIf="environment" [environment]="environment"></app-environment-banner>
 
   <app-header
     [ngStyle]="
