DEVOPS# 182 Prod: Application submitting even when applicant selects "do not submit" - Fixed the issue with the application submitting after cancel button is selected

--- a/dfa/src/UI/embc-dfa/src/app/feature-components/dfa-application-main/dfa-application-main.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/feature-components/dfa-application-main/dfa-application-main.component.html
@@ -184,7 +184,7 @@
             class="button-p save-button"
             mat-stroked-button
             type="button"
-            (click)="setFormData('sign-and-submit');submitFile()"
+            (click)="submitFile()"
           >
             Submit
           </button>
