EMCRI# 842 Portal: On Claim Dashboard, don't display certain values until claim BPF has reached Decision Made - Fixed the styling issue with the title and return to dashboard button on application, project and claim pages - Fixed the issue with showing certain feilds until claim BPF has reached Decision Made. - Added decisions enum to add the decision logic on the project and claims dashboard

--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/project-dashboard-components/project/project.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/project-dashboard-components/project/project.component.html
@@ -151,7 +151,7 @@
         </div>
       </div>
       
-      @if(applItem.stage == 'Approved' || applItem.stage == 'Approved with Exclusions') {
+      @if(applItem.stage == DecisionEnum.Approved || applItem.stage == DecisionEnum.ApprovedWithExclusions) {
       <div style="padding-top: 16px; display: flex;" [hidden]="applItem.isHidden">
           <div class="col-md-2">
             <span><b>Site Location - </b></span>
