--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/claim-dashboard-components/claim/claim.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/claim-dashboard-components/claim/claim.component.html
@@ -132,18 +132,21 @@
         <div class="col-md-2">
           <span>{{applItem.firstClaim == true ? 'Yes' : (applItem.firstClaim == false ? 'No' : 'Not Set')}}</span>
         </div>
-        <div class="col-md-2">
-          <span><b>Approved Claim Total - </b></span>
-        </div>
-        <div class="col-md-2">
-          <span>{{applItem.approvedClaimTotal}}</span>
-        </div>
-        <div class="col-md-2">
-          <span><b>Eligible Payable - </b></span>
-        </div>
-        <div class="col-md-2">
-          <span>{{applItem.eligiblePayable}}</span>
-        </div>
+        @if(applItem.stage == DecisionEnum.Approved || applItem.stage == DecisionEnum.ApprovedWithExclusions){
+          <div class="col-md-2">
+            <span><b>Approved Claim Total - </b></span>
+          </div>
+          <div class="col-md-2">
+            <span>{{applItem.approvedClaimTotal}}</span>
+          </div>
+          <div class="col-md-2">
+            <span><b>Eligible Payable - </b></span>
+          </div>
+          <div class="col-md-2">
+            <span>{{applItem.eligiblePayable}}</span>
+          </div>
+        }
+        
         
       </div>
       <div style="padding-bottom: 16px; display: flex;" [hidden]="applItem.isHidden">
@@ -153,6 +156,7 @@
         <div class="col-md-2">
           <span id="spnCauseOfDamage">{{applItem.finalClaim == true ? 'Yes' : (applItem.finalClaim == false ? 'No' : 'Not Set')}}</span>
         </div>
+        @if(applItem.stage == DecisionEnum.Approved || applItem.stage == DecisionEnum.ApprovedWithExclusions){
         <div class="col-md-2">
           <span><b>Less First $1,000 -</b></span>
         </div>
@@ -165,7 +169,9 @@
         <div class="col-md-2">
           <span id="spnCauseOfDamage">{{applItem.paidClaimAmount}}</span>
         </div>
+      }
       </div>
+    
 
       <div style="border-bottom: 1px solid lightgrey; padding-bottom: 16px; display: flex;" [hidden]="applItem.isHidden">
         <div class="col-md-2">
@@ -174,6 +180,7 @@
         <div class="col-md-2">
           <span id="spnCauseOfDamage">{{applItem.claimTotal }}</span>
         </div>
+        @if(applItem.stage == DecisionEnum.Approved || applItem.stage == DecisionEnum.ApprovedWithExclusions){
         <div class="col-md-2">
           <span><b>Approved Reimbursement % -</b></span>
         </div>
@@ -186,6 +193,7 @@
         <div class="col-md-2">
           <span id="spnCauseOfDamage">{{applItem.paidClaimDate}}</span>
         </div>
+      }
       </div>
 
       <div style="width: 90%; min-width: 725px; display: flex; flex-direction: column;">
