EMCRI # 843 Portal: On submitted Claim, don't display certain values until claim BPF has reached Decision Made - Added stage and substage fields in the dynamisc gate way - Added stage and status fields to the entity - Updated the recovery claims mappings - Updated the logic to show the decisions only if tehy are in approved states

--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-claim-main-forms/recovery-claim/recovery-claim.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-claim-main-forms/recovery-claim/recovery-claim.component.html
@@ -197,6 +197,7 @@
       </ng-container>
       <br />
 
+    @if(recoveryClaim.claim.stage == DecisionEnum.Approved || recoveryClaim.claim.stage == DecisionEnum.ApprovedwithExclusions){
       <ng-container *ngIf="isReadOnly == true">
         <div class="row decisionHeader">
           <b>Decision</b>
@@ -365,6 +366,7 @@
           </div>
         </div>
       </ng-container>
+    }
     </form>
     
   </mat-card-content>
