EMCRI# 843 EMCRI# 843 Portal: On submitted Claim, don't display certain values until claim BPF has reached Decision Made - Added (dfa_decisioncopy) field on the currentclaim and recovery claim endpoints, Dynamicsgateway and entities - Created Enum for the claimDecision - Updated mappings for current and recovery claims - Upated logic on claim dashboard and recoverclaims page to get the claim status and show feilds based on this

--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/claim-dashboard-components/claim/claim.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/claim-dashboard-components/claim/claim.component.html
@@ -132,7 +132,7 @@
         <div class="col-md-2">
           <span>{{applItem.firstClaim == true ? 'Yes' : (applItem.firstClaim == false ? 'No' : 'Not Set')}}</span>
         </div>
-        @if(applItem.stage == DecisionEnum.Approved || applItem.stage == DecisionEnum.ApprovedWithExclusions){
+        @if(applItem.claimDecision == DecisionEnum.Approved || applItem.claimDecision == DecisionEnum.ApprovedWithExclusions){
           <div class="col-md-2">
             <span><b>Approved Claim Total - </b></span>
           </div>
@@ -156,7 +156,7 @@
         <div class="col-md-2">
           <span id="spnCauseOfDamage">{{applItem.finalClaim == true ? 'Yes' : (applItem.finalClaim == false ? 'No' : 'Not Set')}}</span>
         </div>
-        @if(applItem.stage == DecisionEnum.Approved || applItem.stage == DecisionEnum.ApprovedWithExclusions){
+        @if(applItem.claimDecision == DecisionEnum.Approved || applItem.claimDecision == DecisionEnum.ApprovedWithExclusions){
         <div class="col-md-2">
           <span><b>Less First $1,000 -</b></span>
         </div>
@@ -180,7 +180,7 @@
         <div class="col-md-2">
           <span id="spnCauseOfDamage">{{applItem.claimTotal }}</span>
         </div>
-        @if(applItem.stage == DecisionEnum.Approved || applItem.stage == DecisionEnum.ApprovedWithExclusions){
+        @if(applItem.claimDecision == DecisionEnum.Approved || applItem.claimDecision == DecisionEnum.ApprovedWithExclusions){
         <div class="col-md-2">
           <span><b>Approved Reimbursement % -</b></span>
         </div>
