EMCRI# 1014 Portal: On Project Amendment form, don't display values in certain fields until project amendment has been approved or approved with exceptions - Fixed the issue with the amendmend decision not showing on the top bar. - Fixed the logic for enums

--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-project-amendment/dfa-project-amendment.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-project-amendment/dfa-project-amendment.component.html
@@ -145,7 +145,7 @@
                 </mat-form-field>
               </div>
             </div>
-            @if (option.amendmentDecision == DecisionEnum.Approved || option.stage == amendmentDecision.ApprovedWithExclusions) {
+            @if (option.amendmentDecision == DecisionEnum.Approved || option.amendmentDecision == DecisionEnum.ApprovedWithExclusions) {
               <div class="row">
                 <div class="col-md-3">
                   <p style="font-size: 15px">
