EMCRI# 842 Portal: On Claim Dashboard, don't display certain values until claim BPF has reached Decision Made - Work on the bug fix for the claims dashboard and recovery claim - Adjusted enum for Claim Decisions
EMCRI# 1002 Portal: Missing "Total Being Claimed" Amount on Claim Submission and Review Page
Added new Total being claimed feild on recovery claim dashboard and review claims page

--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/review-claim/review-claim.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/review-claim/review-claim.component.html
@@ -109,6 +109,19 @@
             </span>
           </div>
         </div>
+
+        <div class="row info-detail">
+          <div class="col-md-3"><span>Total Being Claimed:</span></div>
+          <div class="col-md-3">
+            <span>
+              $&nbsp;{{
+                recoveryPlanFormAbstract
+                  .claimTotal	 | number : '1.2-2'
+              }}
+            </span>
+          </div>
+        </div>
+        
         
       </mat-card-content>
       <br />
