--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-claim-main-forms/recovery-claim/recovery-claim.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-claim-main-forms/recovery-claim/recovery-claim.component.html
@@ -192,12 +192,34 @@
     
             </mat-form-field>
           </div>
+          <div class="col-md-3 costCurrency">
+            <p  style="font-size: 15px; margin-bottom: 10px !important">
+              Total being Claimed
+            </p>
+            <mat-form-field appearance="outline" class="mat-form-round">
+    
+              <div class="searchDiv">
+                <input
+                  (focusin)="setHelpText(15, tooltip)"
+                  #currencyBoxTotalBeingClaimed
+                  id="currencyBoxTotalBeingClaimed"
+                  formControlName="claimTotal"
+                  matInput
+                  mask="separator.2" thousandSeparator="" decimalMarker="."
+                  maxlength="100"/>
+                <span class="currencyText">CA$</span>
+              </div>
+    
+            </mat-form-field>
+          </div>
+          
+         
           
         </div>
       </ng-container>
       <br />
 
-    @if(recoveryClaim.claim.claimDecision == DecisionEnum.Approved || recoveryClaim.claim.claimDecision == DecisionEnum.ApprovedWithExclusions){
+    @if(recoveryClaim?.claim.claimDecision == DecisionEnum.Approved || recoveryClaim?.claim.claimDecision == DecisionEnum.ApprovedWithExclusions){
       <ng-container *ngIf="isReadOnly == true">
         <div class="row decisionHeader">
           <b>Decision</b>
