--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-claim-main-forms/recovery-claim/recovery-claim.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-claim-main-forms/recovery-claim/recovery-claim.component.html
@@ -192,9 +192,31 @@
     
             </mat-form-field>
           </div>
+
           <div class="col-md-3 costCurrency">
             <p  style="font-size: 15px; margin-bottom: 10px !important">
-              Total being Claimed
+              Claim Eligible GST
+            </p>
+            <mat-form-field appearance="outline" class="mat-form-round">
+    
+              <div class="searchDiv">
+                <input
+                  (focusin)="setHelpText(15, tooltip)"
+                  #currencyBoxClaimEligibleGST
+                  id="currencyBoxClaimEligibleGST"
+                  formControlName="claimEligibleGST"
+                  matInput
+                  mask="separator.2" thousandSeparator="" decimalMarker="."
+                  maxlength="100"/>
+                <span class="currencyText">CA$</span>
+              </div>
+    
+            </mat-form-field>
+          </div>
+
+          <div class="col-md-3 costCurrency">
+            <p  style="font-size: 15px; margin-bottom: 10px !important">
+              Claim Total
             </p>
             <mat-form-field appearance="outline" class="mat-form-round">
     
