EMCRI # 325 Portal DEV: Update language to "Indigenous Governing Bodies and Local Authorities" - Updated the landing page language on the dfa project, index.html, index.test.html, project.dev.html, project.test.html, support-dev.html

--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-project-dashboard/dfa-project-dashboard.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-project-dashboard/dfa-project-dashboard.component.html
@@ -19,7 +19,7 @@
         <div class="material-icons infoIconStyle">info</div>
       </div>
       <div class="col-md-11">
-        <span class="page-subheadbold">This page is for Indigenous communities or local governments.</span><br />
+        <span class="page-subheadbold">This page is for Indigenous Governing Bodies and Local Authorities.</span><br />
             If you are a homeowner, residential tenant, small business, farm, or charitable organization your process is different: <a target="_blank" href="https://www2.gov.bc.ca/gov/content/safety/emergency-management/preparedbc/evacuation-recovery/disaster-financial-assistance">DFA process for individuals, small businesses, farms, and charitable organizations.</a>
       </div>
       <div class="col-md-6"></div>
